# article_sentiments

./: .gitignore  README.md  get-articles.py  pyproject.toml
