[tool.poetry]
name = "article-sentiments"
version = "0.1.0"
description = ""
authors = ["kristiewirth <kristie.ann.wirth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
requests = "^2.23.0"
pylint = "^2.4.4"
pymongo = "^3.10.1"
bs4 = "^0.0.1"
nltk = "^3.4.5"
textblob = "^0.15.3"


[tool.poetry.dev-dependencies]
pylint = "^2.4"

[tool.black]
line-length = 88
single-quote = true  # relies on our fork https://github.com/zapier/black/pull/1
skip-numeric-underscore-normalization = true
exclude = '''
/(
    \.git
  | venv
  | node_modules
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
